--- a/05-random_number_generation_and_vectorization.ipynb
+++ b/05-random_number_generation_and_vectorization.ipynb
@@ -52,9 +52,9 @@
     "  manually, otherwise it will automatically be set by NumPy, perhaps based on\n",
     "  the time in milliseconds since the beginning of the session.\n",
     "* $ x_1 = f(x_0) $;\n",
-    "* $ x_2 = (f \\circ f)(x_0) = f(x_1) $;\n",
+    "* $ x_2 = f(x_1) = (f \\circ f)(x_0) $;\n",
     "* $\\  \\vdots $\n",
-    "* $ x_n = \\underbrace{(f \\circ f \\circ \\cdots \\circ f)}_{n}(x_0) $.\n",
+    "* $ x_n = f(x_{n - 1}) = \\underbrace{(f \\circ f \\circ \\cdots \\circ f)}_{n}(x_0) $.\n",
     "* $ \\ \\vdots $\n",
     "\n",
     "In particular, if we know the seed and the function/algorithm, then we can easily\n",
@@ -168,7 +168,7 @@
     "\n",
     "* `random.rand` generates pseudo-random numbers from a __uniform distribution__ over $ [0, 1) $,\n",
     "  meaning that the probability that the chosen number lies in an interval $ I \\subset [0, 1) $\n",
-    "  is exactly the length of $ I $. \n",
+    "  equals the length of $ I $. \n",
     "* `random.randn` produces samples drawn from the\n",
     "  __standard normal (Gaussian) distribution__ (having mean $ = 0 $, standard deviation\n",
     "  $ =  1 $), whose graph is also known as the _bell curve_. It is extremely\n",
@@ -1193,7 +1193,7 @@
     "the _probability distribution_ on our sample space is the function $ f \\colon\n",
     "\\Omega \\to [0, 1] $ that assigns the value $ \\frac{1}{6} $ to each face.\n",
     "Actually, this is a very special distribution called the _uniform distribution_.\n",
-    "However, in practice the die will never be perfectly balanced, so that some\n",
+    "In practice, the die will never be perfectly balanced, so that some\n",
     "outcomes (faces) may be more probable than others. It is the purpose of the\n",
     "probability distribution to describe how probabilities are allocated among the\n",
     "possible outcomes.\n",
@@ -1203,11 +1203,16 @@
     "height of an individual, are more adequately modeled by continuous sample spaces.\n",
     "In such cases, the probability of any single outcome is zero. The probability\n",
     "of an event $ A $ is obtained by _integrating_ the probability distribution over\n",
-    "$ A $.  The formal definitions below will cover both cases.\n",
-    "\n",
+    "$ A $.  The formal definitions below will cover both cases."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### ⚡ $ 4.2 $ Formal definitions\n",
     "\n",
-    "Let $ \\Omega $ be an arbitrary set (not necessarily finite). An\n",
+    "Let $ \\Omega $ be an arbitrary set, not necessarily finite. An\n",
     "element of $ \\Omega $ will be called an __outcome__ (or __elementary event__),\n",
     "and a subset of $ \\Omega $ will be called an __event__.  A __probability\n",
     "function__ $ P $ on $ \\Omega $ is a real function defined on the set of events\n",
@@ -1229,13 +1234,14 @@
     "$$ P\\left(\\bigcup_{k=1}^{\\infty} A_k\\right) = \\sum_{k=1}^{\\infty} P(A_k)\\,. $$\n",
     "\n",
     "Formally, a __sample space__ is a pair consisting of a set $ \\Omega $ and\n",
-    "a probability function $ P $ as above. (Actually, our definition is not\n",
-    "entirely correct because in the case where $ \\Omega $ is not\n",
-    "discrete, it may not be possible to define $ P $ consistently over the\n",
-    "set of _all_ subsets of $ \\Omega $. In other words, there may be some subsets\n",
-    "of $ \\Omega $ which are not considered events. Because of this, we only require\n",
-    "that $ P $ be defined over a so-called *$ \\sigma $-algebra*, but we will ignore\n",
-    "these technical difficulties here).\n",
+    "a probability function $ P $ as above.\n",
+    "\n",
+    "⚠️ Actually, our definition is not entirely correct because in the case where $\n",
+    "\\Omega $ is not discrete, it may not be possible to define $ P $ consistently\n",
+    "over the set of _all_ subsets of $ \\Omega $. In other words, there may be some\n",
+    "subsets of $ \\Omega $ which are not considered events. Because of this, we only\n",
+    "require that $ P $ be defined over a so-called *$ \\sigma $-algebra*, but we will\n",
+    "ignore these technical difficulties here.\n",
     "\n",
     "Usually a sample space is described not in terms of the probability function\n",
     "$ P $ above, which is defined on a set of subsets of $ \\Omega $, but in terms\n",
@@ -1276,7 +1282,7 @@
     "P(\\Omega) = \\int_{\\Omega}f(x)\\,dx\\, = 1\\,.\n",
     "$$\n",
     "In practice we almost always assume that $ f $ is continuous, so that the\n",
-    "integrals above exists for any reasonable event $ A $ of $ \\Omega $. A sample\n",
+    "integrals above exist for any reasonable event $ A $ of $ \\Omega $. A sample\n",
     "space $ \\Omega $ together with such a continuous probability distribution $ f $\n",
     "is referred to as a __continuous__ sample space."
    ]
@@ -1303,7 +1309,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
