--- a/01-introduction_to_numpy_arrays.ipynb
+++ b/01-introduction_to_numpy_arrays.ipynb
@@ -367,7 +367,7 @@
    "metadata": {},
    "source": [
     "The __shape__ of an array is a tuple of integers indicating the size of each of\n",
-    "its dimensions. The preceding array $ \\mathbf A $ has shape $ (3, 4) $ since it\n",
+    "its dimensions. The preceding array $ A $ has shape $ (3, 4) $ since it\n",
     "has three rows and four columns."
    ]
   },
@@ -531,7 +531,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "__Exercise:__ What happens if you delete the blank line inside the definition of $ \\mathbf A $ above?\n",
+    "__Exercise:__ What happens if you delete the blank line inside the definition of $ A $ above?\n",
     "What happens if you insert an additional blank line?\n",
     "\n",
     "Note that a $ 3D $ array need not be a \"cube\" (i.e., have all three dimensions\n",
@@ -687,7 +687,7 @@
    "metadata": {},
    "source": [
     "Finally, we can create a new array _of the same shape and datatype_ as a\n",
-    "given array $ \\mathbf A $ but filled with zeros, ones or some other specified value with the\n",
+    "given array $ A $ but filled with zeros, ones or some other specified value with the\n",
     "functions `zeros_like`, `ones_like` and `full_like`, respectively:"
    ]
   },
@@ -1123,12 +1123,11 @@
    "source": [
     "__Exercise:__ Build a \"$ 3D $ identity array\" $ M $ of shape $ (5, 5, 5) $ by\n",
     "first populating it with zeros, then setting all elements with indices\n",
-    "of the form $ (i, i, i) $ equal to $ 1 $. \n",
+    "of the form $ (i, i, i) $ equal to $ 1 $ in the following two ways: \n",
     "\n",
-    "(a) How could you use a `for` loop to do\n",
-    "this?\n",
+    "(a) Using a `for` loop.\n",
     "\n",
-    "(b) Set all five elements to $ 1 $ with the single call `fill_diagonal(M, 1)`."
+    "(b) With the single call `fill_diagonal(M, 1)`."
    ]
   },
   {
@@ -1167,11 +1166,6 @@
     "\n",
     "We will meet and use some of these in other notebooks."
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
