--- a/02-slicing_and_filtering.ipynb
+++ b/02-slicing_and_filtering.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -24,7 +33,7 @@
    "source": [
     "__Exercise:__ Let $ \\mathbf a = (0, 1, \\cdots, 10) $.\n",
     "\n",
-    "(a) Instantiate this array using `linspace` or `arange`.\n",
+    "(a) Instantiate this array using `arange` or with `linspace` together with the instruction `a.astype(int)`.\n",
     "\n",
     "(b) Take a slice of $ \\mathbf a $ resulting in $ (0, 1, \\cdots, 4) $.\n",
     "\n",
@@ -50,8 +59,16 @@
     "📝 _Slicing an array only creates a view on the original array, not a copy_.\n",
     "This behavior is by design, for efficiency reasons. However, this means that\n",
     "modifying the data in the slice will also modify the original array. We will\n",
-    "discuss later how to create independent copies."
+    "discuss later how to create independent copies. (Note in contrast that slices of\n",
+    "Python lists _are_ independent from their originals.)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -170,7 +187,7 @@
     "              [7, 8, 9]])\n",
     "print(M, '\\n')\n",
     "\n",
-    "# Extracting row 1 through a slice:\n",
+    "# Extracting row 1 through a double slice:\n",
     "print(M[1:2, :], '\\n')  # The result is still a 2D array\n",
     "\n",
     "# Extracting row 1 by indexing into it:\n",
@@ -224,7 +241,7 @@
     "\n",
     "(a) Extract the last row to produce a $ 1D $ array.\n",
     "\n",
-    "(b) Extract the column of index $ 3 $, but as a $ 2D $ array.\n",
+    "(b) Extract the column of index $ 3 $, as a $ 2D $ array.\n",
     "\n",
     "(c) Extract a $ 2\\times 2 $ sub-array from the center of this array.\n",
     "\n",
@@ -265,30 +282,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Original array: [1 2 3 4 5]\n",
-      "Filter:  [False False  True  True  True]\n",
-      "Selected elements: [3 4 5]\n"
+      "original array: [1 2 3 4 5]\n",
+      "filter:  [False False  True  True  True]\n",
+      "selected elements: [3 4 5]\n"
      ]
     }
    ],
    "source": [
     "v = np.array([1, 2, 3, 4, 5])\n",
-    "print(\"Original array:\", v)\n",
+    "print(\"original array:\", v)\n",
     "\n",
     "# Create a boolean index array:\n",
     "filter = v > 2\n",
-    "print(\"Filter: \", filter)\n",
+    "print(\"filter: \", filter)\n",
     "\n",
     "# Use boolean indexing to select elements:\n",
     "selected_elements = v[filter]\n",
-    "print(\"Selected elements:\", selected_elements)"
+    "print(\"selected elements:\", selected_elements)"
    ]
   },
   {
@@ -304,19 +321,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of elements greater than two: 3\n"
+      "# of elements greater than two: 3\n",
+      "2\n"
      ]
     }
    ],
    "source": [
-    "print(\"Number of elements greater than two:\", np.sum(filter))"
+    "print(\"# of elements greater than two:\", np.sum(filter))"
    ]
   },
   {
@@ -324,7 +342,7 @@
    "metadata": {},
    "source": [
     "Here's a more interesting example. Consider a workplace where employees log\n",
-    "their daily hours. We'll look at filtering data to find instances where\n",
+    "their daily hours. Consider the problem of retrieving the instances where\n",
     "one of the employees worked overtime. The information is stored over two arrays:\n",
     "* A $ 1D $ array `names` containing the names of five employees.\n",
     "* A $ 2D $ array `hours` whose $ i $-th row corresponds to the $ i $-th employee\n",
@@ -333,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -387,8 +405,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now we can now use another filter to the obtain the times that Carol worked\n",
-    "overtime (and the corresponding hours). Note that the result is a $ 1D $ array:"
+    "Now we can use another filter to obtain the times when Carol worked overtime\n",
+    "(and the corresponding hours). Note that the result is a $ 1D $ array:"
    ]
   },
   {
@@ -443,7 +461,7 @@
    "source": [
     "__Exercise:__ You're provided below with a dataset `rainfall_data` of daily\n",
     "rainfall measurements (in millimeters) in a city for four months (June to\n",
-    "September), stored as a 2D NumPy array.  Each row represents a month, and each\n",
+    "September), stored as a $ 2D $ NumPy array.  Each row represents a month, and each\n",
     "column represents a day.\n",
     "\n",
     "(a) Compute the average rainfall and the standard deviation of the sample\n",
@@ -518,8 +536,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
