--- a/03-vectors_and_matrices.ipynb
+++ b/03-vectors_and_matrices.ipynb
@@ -508,8 +508,8 @@
    "source": [
     "## $ \\S 2 $ Basic operations involving matrices\n",
     "\n",
-    "Just as for vectors, we can __add__ and __subtract__ two matrices (or more\n",
-    "generally any two arrays) _having the same shape_ using\n",
+    "Just as for vectors, we can __add__ and __subtract__ two matrices, or more\n",
+    "generally any two arrays _having the same shape_ using\n",
     "`+` and `-` respectively:"
    ]
   },
@@ -639,7 +639,7 @@
    "metadata": {},
    "source": [
     "📝 `np.matmul` and `@` are completely equivalent in their output and\n",
-    "performance. The choice between them is usually a matter of preference and code\n",
+    "performance. The choice between them is a matter of preference and code\n",
     "readability."
    ]
   },
@@ -811,9 +811,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "When multiplying a $ 2D $ array (matrix) by a $ 1D $ array (vector), _the vector\n",
+    "When multiplying a $ 2D $ array (matrix) by a $ 1D $ array (vector), the vector\n",
     "is temporarily viewed as a column matrix and the operation is then treated as a\n",
-    "matrix multiplication_. Thus, matrix-vector multiplication can also be handled\n",
+    "matrix multiplication.  Thus, matrix-vector multiplication can also be handled\n",
     "by `@`, or equivalently `np.matmul`:"
    ]
   },
