--- a/04-solving_linear_equations.ipynb
+++ b/04-solving_linear_equations.ipynb
@@ -10,7 +10,7 @@
     "engineering. NumPy, especially through its `numpy.linalg` submodule, offers\n",
     "several methods to solve or compute approximate solutions to such systems.\n",
     "\n",
-    "### $ 3.1 $ Solving square systems\n",
+    "## $ \\S 1 $ Solving square systems\n",
     "\n",
     "Consider a set of $ n $ linear equations in $ n $ variables $ x_1, \\dots, x_n $:\n",
     "\\begin{equation*}\n",
@@ -45,10 +45,10 @@
     "\\end{bmatrix} = \\mathbf b\\,.\n",
     "\\end{equation*}\n",
     "\n",
-    "This matrix $ A $ is called the __coefficient matrix__ associated to the system of equations.\n",
-    "Notice that in our case, this is a _square_ matrix. Even though it would be possible to consider\n",
-    "systems of $ m $ equations in $ n $ variables where $ m \\ne n $, we shall not do so here for the\n",
-    "sake of simplicity."
+    "This matrix $ A $ is called the __coefficient matrix__ associated to the system\n",
+    "of equations.  Notice that in our case, this is a _square_ matrix. Systems of $\n",
+    "m $ linear equations in $ n $ variables where $ m \\ne n $ will be considered\n",
+    "only in the next section, for the sake of simplicity."
    ]
   },
   {
@@ -145,6 +145,13 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -159,9 +166,10 @@
     "\\end{alignat*}\n",
     "\\right.\n",
     "$$\n",
-    "The first of these equations can easily be solved by forward-substitution, and the second by backward-substitution.\n",
-    "To find the $ LU $ decomposition itself, Gaussian elimination is applied to $ A $. This is all discussed\n",
-    "in Linear Algebra courses, where you will do many of these computations by hand."
+    "The first of these equations can easily be solved by forward-substitution, and\n",
+    "the second by backward-substitution.  To find the $ LU $ decomposition itself,\n",
+    "Gaussian elimination is applied to $ A $. This is discussed in any Linear Algebra\n",
+    "course, where you will do many of these computations by hand."
    ]
   },
   {
@@ -270,7 +278,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### $ 3.2 $ Least-squares approximate solution to overdetermined systems\n",
+    "## $ \\S 2 $ Least-squares approximate solution to overdetermined systems\n",
     "\n",
     "The most general linear system of equations is $ A \\mathbf x = \\mathbf b $ where\n",
     "$$\n",
@@ -380,11 +388,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### $ 3.3 $ Other features\n",
+    "### $ \\S 3 $ Other features\n",
     "\n",
     "With the help of `np.linalg` we can also compute:\n",
     "* The eigenvalues and eigenvectors of a square matrix (`eig`).\n",
-    "* The QR-decomposition of a square matrix (`qr`).\n",
+    "* The $ QR $-decomposition of a square matrix (`qr`).\n",
     "* The singular value decomposition (`svd`) of a matrix.\n",
     "* The (Moore-Penrose) pseudo-inverse of a matrix (`pinv`)."
    ]
