--- a/05-array_attributes_and_methods.ipynb
+++ b/05-array_attributes_and_methods.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -15,8 +24,8 @@
     "\n",
     "### $ 1.1 $ Shape and number of dimensions\n",
     "\n",
-    "Recall from the previous notebook that, just as in Linear Algebra, an extremely\n",
-    "important property of a $ 2D $ array is its **shape**, which is the element\n",
+    "Recall from the previous notebook that, just as in Linear Algebra, a central\n",
+    "property of a $ 2D $ array is its **shape**, which is the element\n",
     "count along each of its **axes** (vertical and horizontal).  Referring to the\n",
     "example below, the shape of our matrix $ A $ is $ (3, 4) $, or $ 3 \\times 4 $,\n",
     "since it has three rows and four columns:"
@@ -144,7 +153,7 @@
     "\n",
     "### $ 1.3 $ The main attributes of arrays\n",
     "\n",
-    "Although ndarrays come with several attributes, most of them relate to the array's\n",
+    "Although arrays come with several attributes, most of them relate to the array's\n",
     "internal representation or low-level utilities. The five most frequently used and\n",
     "conceptually important are:\n",
     "\n",
@@ -153,7 +162,7 @@
     "| `ndim`      | The number of dimensions (axes) of the array  | `int`   |\n",
     "| `shape`     | The number of elements that lie along each axis | `tuple`     |\n",
     "| `size`      | The total number of elements in the array     | `int`   |\n",
-    "| `dtype`     | The data type of the elements of the array    | `dtype`  |\n",
+    "| `dtype`     | The data type of the _elements_ of the array    | `dtype`  |\n",
     "| `T`         | The transpose of the array                    | `ndarray`    |\n",
     "\n"
    ]
@@ -270,23 +279,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ True,  True])"
+       "array([ True,  True,  True])"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "a = np.array([1, 2])\n",
-    "b = np.array([1, 2])\n",
+    "a = np.array([1, 2, 3])\n",
+    "b = np.array([1, 2, 3])\n",
     "a == b"
    ]
   },
@@ -313,8 +322,8 @@
     "## $ \\S 2 $ Array methods\n",
     "\n",
     "Besides attributes, objects of a certain class usually come with predefined\n",
-    "**methods**. _Methods are functions associated to each instance of the class which\n",
-    "have direct access to that instance's state_. The\n",
+    "**methods**. _Methods are functions associated to each instance of the class and\n",
+    "which have direct access to that instance's state_. The\n",
     "syntax for calling a method named `f` of object `x` is `x.f(<arguments>)`. For\n",
     "instance, the `sum` method associated to each array returns the sum of all of\n",
     "its entries:"
@@ -395,23 +404,23 @@
    "source": [
     "The main array methods that involve mathematical operations are:\n",
     "\n",
-    "| Method    | Description                                          |\n",
+    "| Method    | Description of its output                            |\n",
     "|-----------|------------------------------------------------------|\n",
-    "| `sum`     | Returns the sum of all the elements in the array.   |\n",
-    "| `prod`    | Returns the product of all the elements in the array.|\n",
-    "| `mean`    | Returns the arithmetic mean of the array.           |\n",
-    "| `std`     | Returns the standard deviation of the array.        |\n",
-    "| `var`     | Returns the variance of the array.                  |\n",
-    "| `min`     | Returns the minimum value of the array.             |\n",
-    "| `max`     | Returns the maximum value of the array.             |\n",
-    "| `argmin`  | Returns the indices of the minimum value along an axis. |\n",
-    "| `argmax`  | Returns the indices of the maximum value along an axis. |\n",
-    "| `cumsum`  | Returns the cumulative sum of the elements along a given axis. |\n",
-    "| `cumprod` | Returns the cumulative product of the elements along a given axis. |\n",
+    "| `sum`     | Sum of all the elements in the array   |\n",
+    "| `prod`    | Product of all the elements in the array|\n",
+    "| `mean`    | Arithmetic mean of the array           |\n",
+    "| `std`     | Standard deviation of the array        |\n",
+    "| `var`     | Variance of the array                  |\n",
+    "| `min`     | Minimum value of the array             |\n",
+    "| `max`     | Maximum value of the array             |\n",
+    "| `argmin`  | Indices of the minimum value along an axis |\n",
+    "| `argmax`  | Indices of the maximum value along an axis |\n",
+    "| `cumsum`  | Cumulative sum of the elements along a given axis |\n",
+    "| `cumprod` | Cumulative product of the elements along a given axis |\n",
     "\n",
     "\n",
-    "_All of these can be applied to a specific axis or axes by setting a value for\n",
-    "the `axis` parameter_. One can also apply them to more complex subarrays using\n",
+    "All of these can be applied to a specific axis or axes by setting a value for\n",
+    "the `axis` parameter. One can also apply them to more complex subarrays using\n",
     "slices."
    ]
   },
@@ -499,6 +508,36 @@
     "np.random.seed = 12345\n",
     "data = np.random.randn(100, 5)\n",
     "print(data[:5])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__Exercise:__ Given the $ 1D $ array below, calculate the mean of all numbers in\n",
+    "it that are greater than $ 50 $."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[72 36  7 37 83 97 38 77 19  7 64 56 25 13 15 27 73 40 85 68 76 22 10 77\n",
+      " 61 55 18 47 46 15 87 52 66 35 21 79 86 16 91 98 45 72 55 13 26 29 78  1\n",
+      " 28 31 75 25 67  1 23 11  2 61 50 83 99 73 39 60  9 85 83 20 68 61 11 63\n",
+      " 42 21 59 30 17 37 76 69 11 97 71 86 21 15 63  2 82 17 49 35 87 94 44 49\n",
+      " 61  8 88 86]\n"
+     ]
+    }
+   ],
+   "source": [
+    "v = np.random.randint(1, 101, size=100)\n",
+    "print(v)"
    ]
   },
   {
@@ -702,7 +741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -729,15 +768,15 @@
     "B = a.reshape((2, 3))   # Here we use the `reshape` _method_\n",
     "\n",
     "print(A, end='\\n\\n')  # Here a has been reshaped into a 3 by 2 matrix\n",
-    "print(B, end='\\n\\n')  # Here a has been reshaped into a 2 by 3 matrix\n"
+    "print(B, end='\\n\\n')  # Here a has been reshaped into a 2 by 3 matrix"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Note that when reshaping an array, _the new shape must be compatible with the\n",
-    "size of the original array_. For example, the following results in an error:"
+    "Note that when reshaping an array, the new shape must be compatible with the\n",
+    "size of the original array. For example, the following results in an error:"
    ]
   },
   {
@@ -889,13 +928,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "📝 There is also a _function_ `np.copy` that is essentially equivalent to the `copy` method."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "There is also a _function_ `np.copy` that is essentially equivalent to the `copy` method.\n",
+    "\n",
     "The `flatten` method takes a multi-dimensional array and returns a new,\n",
     "independent _one-dimensional_ array containing all of the elements of the original\n",
     "array, while preserving their order. "
@@ -959,7 +993,7 @@
    "metadata": {},
    "source": [
     "__Exercise:__ The $ 2D $ of shape $ 28 \\times 28 $ in the code cell below\n",
-    "represents a grayscale image. Write a function to rotate this image 90 degrees\n",
+    "represents a grayscale image. Write a function to rotate this image $ 90 $ degrees\n",
     "clockwise without using any special image processing libraries.\n",
     "\n",
     "_Hint_: This can be accomplished by first transposing the array and then\n",
@@ -1032,6 +1066,8 @@
    "metadata": {},
    "source": [
     "Some additional methods and functions dealing with array shapes are:\n",
+    "* `A.sort()` method: flattens and sorts the array in increasing order; returns a new, independent array.\n",
+    "  This method supports several additional options, such as sorting along a specific axis or choosing a specific sorting algorithm.\n",
     "* `A.squeeze()` method: removes axes of length one from array $ A $. For example, an array\n",
     "  of shape $ (1, 3, 1) $ becomes $ (3,) $ after squeezing.\n",
     "* `A.swapaxes(axis1, axis2)` method: Swaps two axes of an array. It only\n",
@@ -1149,7 +1185,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
