--- a/01-introduction_to_numpy_arrays.ipynb
+++ b/01-introduction_to_numpy_arrays.ipynb
@@ -366,6 +366,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "__Exercise:__ Create a $ 3\\times 3 $ array to represent a tic-tac-toe board\n",
+    "Use the string `' '` (single whitespace) for an empty cell, and the strings\n",
+    "`'X'` and `'O'` for the pieces placed by each of the two players.\n",
+    "Set up the board for the following game state:\n",
+    "~~~\n",
+    " X |   | O \n",
+    "---+---+---\n",
+    "   | X |   \n",
+    "---+---+---\n",
+    " O |   | X \n",
+    "~~~"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "game_board = np.array(...)\n",
+    "\n",
+    "print(game_board)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "The __shape__ of an array is a tuple of integers indicating the size of each of\n",
     "its dimensions. The preceding array $ A $ has shape $ (3, 4) $ since it\n",
     "has three rows and four columns."
