--- a/05-array_attributes_and_methods.ipynb
+++ b/05-array_attributes_and_methods.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -90,21 +90,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(3,) <-- Note that the shape is not '3', but rather the tuple '(3, )'\n",
+      "(3,)\n",
+      "Note that the shape is not '3', but rather the tuple '(3, )'\n",
       "<class 'tuple'>\n"
      ]
     }
    ],
    "source": [
     "a = np.array([11, 13, 17])\n",
-    "print(a.shape, \"<-- Note that the shape is not '3', but rather the tuple '(3, )'\")\n",
+    "print(a.shape)\n",
+    "\n",
+    "print(\"Note that the shape is not '3', but rather the tuple '(3, )'\")\n",
     "print(type(a.shape))"
    ]
   },
@@ -112,7 +115,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "__Exercise:__ What are the dimension and shape of an empty array?"
+    "__Exercise:__ What are the dimension and the shape of an empty array?"
    ]
   },
   {
@@ -128,16 +131,16 @@
    "source": [
     "### $ 1.2 $ Attributes and related terminology\n",
     "\n",
-    "An instance (object) of a specific class, such as the array $ A $ of type `ndarray`,\n",
-    "is equipped with a set of predefined **attributes**. Attributes are simply\n",
+    "An instance, or object, of a specific class, such as the array $ A $ of type `ndarray`,\n",
+    "is equipped with a set of predefined **attributes**. Attributes are \n",
     "_properties inherent to every instance of the class_ (in this case, that of\n",
     "ndarrays). The **state** of an object is _the set of current values of all\n",
     "of its attributes._\n",
     "\n",
-    "📝 To access an attribute of an object `x`, the syntax is `x.<attribute name>`.\n",
+    "📝 To access an attribute `a` of an object `x`, the syntax is `x.a`.\n",
     "\n",
     "For example, suppose that we want to design a Python class to represent cars.\n",
-    "An instance of this class would then be a representation of one specific car\n",
+    "An instance of this class would then correspond to one specific car\n",
     "in the real world.  Some plausible attributes of this class could be:\n",
     "* Its color (say, `color`, of type `str`).\n",
     "* The year in which it was manufactured (say, `year`, of type `int`).\n",
@@ -146,7 +149,7 @@
     "\n",
     "And so on for any other relevant property of cars that we might want to include\n",
     "in our model. Note that the values of these attributes for different car\n",
-    "instances will vary, in general. Moreover, from this example we can easily imagine\n",
+    "instances will vary, in general. However, from this example we can easily imagine\n",
     "a situation where two cars have exactly the same state, as defined by their\n",
     "set of attribute values, and yet they are distinct objects, i.e., have different\n",
     "_identities_.\n",
@@ -159,11 +162,11 @@
     "\n",
     "| Attribute   | Description                                    | Type      |\n",
     "|-------------|------------------------------------------------|-----------|\n",
-    "| `ndim`      | The number of dimensions (axes) of the array  | `int`   |\n",
-    "| `shape`     | The number of elements that lie along each axis | `tuple`     |\n",
-    "| `size`      | The total number of elements in the array     | `int`   |\n",
-    "| `dtype`     | The data type of the _elements_ of the array    | `dtype`  |\n",
-    "| `T`         | The transpose of the array                    | `ndarray`    |\n",
+    "| `ndim`      | Number of dimensions (axes) of the array  | `int`   |\n",
+    "| `shape`     | Number of elements that lie along each axis | `tuple`     |\n",
+    "| `size`      | Total number of elements in the array     | `int`   |\n",
+    "| `dtype`     | Data type of the _elements_ of the array    | `dtype`  |\n",
+    "| `T`         | Transpose of the array                    | `ndarray`    |\n",
     "\n"
    ]
   },
@@ -251,7 +254,7 @@
    "metadata": {},
    "source": [
     "__Exercise:__ A _square matrix_ has the same number of rows and columns. Write a\n",
-    "function `is_square(matrix)` that accepts a 2D array as its argument and returns\n",
+    "function `is_square(matrix)` that accepts a $ 2D $ array as its argument and returns\n",
     "`True` or `False` depending on whether the given matrix is square or not. How\n",
     "would you generalize to multidimensional arrays?"
    ]
@@ -489,25 +492,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 0.12443996  1.52710121 -1.94918188 -0.88968523  1.28665732]\n",
-      " [ 1.0514502  -2.45293608 -0.10476106 -1.2794813   1.21423755]\n",
-      " [-0.2234047  -0.87370139  0.13108493 -0.90115016  1.35420928]\n",
-      " [ 0.10541909  1.38634366  0.17261146  0.28991732 -0.8948302 ]\n",
-      " [-1.03102206  1.58682602  1.04707002  0.96455033  0.04842482]]\n"
+      "[[ 0.85805324 -1.30167105  0.45641212  1.58162952  0.36738544]\n",
+      " [-0.75800812  1.39250085  0.14171206 -0.13134499 -1.07336724]\n",
+      " [ 2.32268766  0.6901426   0.54025557  0.23419604 -0.6370402 ]\n",
+      " [ 0.17880191 -0.60913011 -0.21999756  0.07220071 -1.58217841]\n",
+      " [ 1.40873944  0.24159351  0.03660412  0.38819821 -0.15872273]]\n"
      ]
     }
    ],
    "source": [
     "np.random.seed = 12345\n",
     "data = np.random.randn(100, 5)\n",
-    "print(data[:5])"
+    "\n",
+    "print(data[:5])  # Display first five rows of the table"
    ]
   },
   {
@@ -566,7 +570,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## $ \\S 3 $ Reshaping arrays\n",
+    "## $ \\S 3 $ Reshaping and changing the datatype of arrays\n",
+    "\n",
+    "### $ 3.1 $ Setting and changing the type\n",
     "\n",
     "Recall that the `dtype` attribute of an array stores its datatype. We can create\n",
     "a new array with a different datatype from a given array by using the method\n",
@@ -671,7 +677,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To prescribe the data type of an array at the moment of its creation, we can\n",
+    "To prescribe the datatype of an array at the moment of its creation, we can\n",
     "use the `dtype` argument available in almost all array creation functions\n",
     "provided by NumPy."
    ]
@@ -719,8 +725,8 @@
    "metadata": {},
    "source": [
     "__Exercise:__ Create arrays \n",
-    "$$ \\mathbf a = (2, 2, 2)\\,, \\quad \\mathbf b = (2, 4, 6) \\quad \\text{and} \\quad\n",
-    "\\mathbf c = (2, 3, 4) $$\n",
+    "$$ \\mathbf a = (2, 2, 2, 2)\\,, \\quad \\mathbf b = (2, 4, 6, 8) \\quad \\text{and} \\quad\n",
+    "\\mathbf c = (2, 3, 4, 5) $$\n",
     "of type `int32` using `full`, `arange` and `linspace`, respectively."
    ]
   },
@@ -735,13 +741,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### $ 3.2 $ Modifying the shape of arrays\n",
+    "\n",
     "Reshaping arrays is a common and fundamental operation in NumPy. There is both\n",
     "a function and a method named `reshape` that can accomplish this:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -765,6 +773,7 @@
     "print(a, end='\\n\\n')\n",
     "\n",
     "A = np.reshape(a, (3, 2))  # Here we use the _function_ `reshape`\n",
+    "\n",
     "B = a.reshape((2, 3))   # Here we use the `reshape` _method_\n",
     "\n",
     "print(A, end='\\n\\n')  # Here a has been reshaped into a 3 by 2 matrix\n",
@@ -775,8 +784,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Note that when reshaping an array, the new shape must be compatible with the\n",
-    "size of the original array. For example, the following results in an error:"
+    "Note that when we reshape an array, the new shape must be compatible with the\n",
+    "size of the original array. For example, the following results in an error (why?):"
    ]
   },
   {
@@ -792,7 +801,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "When reshaping an array, we may also specify $ -1 $ in a dimension to instruct\n",
+    "When reshaping, we may also specify $ -1 $ in a dimension to instruct\n",
     "NumPy to infer the number of elements along that dimension from the size of the\n",
     "array and that of the remaining dimensions. This is especially useful when an\n",
     "array is passed to us by the user as an argument in a function call, but we do\n",
@@ -870,8 +879,8 @@
     "of `reshape`. In both cases, NumPy returns a _new_ array, while the original\n",
     "array remains unchanged. However, these operations provide a view of the\n",
     "original array's data whenever possible, meaning that they do not copy the\n",
-    "array's data unless necessary. Thus, _modifications to the data in the reshaped\n",
-    "array can affect the original array and vice versa_. Let's use the previous\n",
+    "array's _data_ unless necessary. Thus, modifications to the data in the reshaped\n",
+    "array can affect the original array and vice versa. Let's use the previous\n",
     "example to illustrate this:"
    ]
   },
@@ -932,12 +941,12 @@
     "\n",
     "The `flatten` method takes a multi-dimensional array and returns a new,\n",
     "independent _one-dimensional_ array containing all of the elements of the original\n",
-    "array, while preserving their order. "
+    "array. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -994,12 +1003,12 @@
    "source": [
     "__Exercise:__ The $ 2D $ of shape $ 28 \\times 28 $ in the code cell below\n",
     "represents a grayscale image. Write a function to rotate this image $ 90 $ degrees\n",
-    "clockwise without using any special image processing libraries.\n",
+    "clockwise.\n",
     "\n",
     "_Hint_: This can be accomplished by first transposing the array and then\n",
-    "flipping it horizontally (i.e., reversing the order of\n",
-    "the entries along each row) with an appropriate slice. This is illustrated in the $ 3 \\times 3 $ example\n",
-    "below, but the same idea works in any dimension.\n",
+    "flipping it vertically (i.e., reversing the order of the entries along each\n",
+    "column) with an appropriate slice. This is illustrated in the $ 3 \\times 3 $\n",
+    "example below, but the same idea works in any dimension.\n",
     "$$\n",
     "\\begin{bmatrix}\n",
     "a & b & c \\\\\n",
@@ -1012,7 +1021,7 @@
     "b & e & h \\\\\n",
     "c & f & i \\\\\n",
     "\\end{bmatrix}\n",
-    "\\overset{\\text{flip hor.}}{\\longrightarrow}\n",
+    "\\overset{\\text{flip ver.}}{\\longrightarrow}\n",
     "\\begin{bmatrix}\n",
     "g & d & a \\\\\n",
     "h & e & b \\\\\n",
@@ -1065,9 +1074,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### $ 3.3 $ Other array methods\n",
+    "\n",
     "Some additional methods and functions dealing with array shapes are:\n",
-    "* `A.sort()` method: flattens and sorts the array in increasing order; returns a new, independent array.\n",
-    "  This method supports several additional options, such as sorting along a specific axis or choosing a specific sorting algorithm.\n",
+    "* `A.sort()` method: Sorts the array in-place, along the last axis (by default).\n",
     "* `A.squeeze()` method: removes axes of length one from array $ A $. For example, an array\n",
     "  of shape $ (1, 3, 1) $ becomes $ (3,) $ after squeezing.\n",
     "* `A.swapaxes(axis1, axis2)` method: Swaps two axes of an array. It only\n",
@@ -1076,6 +1086,30 @@
     "  tuple `axes`. If no axes are provided, it reverses the order of the axes.\n",
     "* `expand_dims(A, axis=i)` function: Inserts a new axis, expanding the array's\n",
     "  shape by one dimension at the specified position ($ i $ in this case).\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 2 9]\n",
+      " [4 6 8]\n",
+      " [3 5 7]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "A = np.array([[9, 2, 1],\n",
+    "              [4, 8, 6],\n",
+    "              [3, 5, 7]])\n",
+    "\n",
+    "A.sort()  # Sort A in-place along its last axis (the column axis)\n",
+    "print(A)"
    ]
   },
   {
