fix: typos in 04

--- a/04-solving_linear_equations.ipynb
+++ b/04-solving_linear_equations.ipynb
@@ -282,7 +282,7 @@
     "\n",
     "The most general linear system of equations is $ A \\mathbf x = \\mathbf b $ where\n",
     "$$\n",
-    "A \\text{ is $ m \\times n $}, \\quad \\mathbf x \\in \\R^n \\quad \\text{and} \\quad \\mathbf b \\in \\R^m\\,. \n",
+    "A \\text{ is $ m \\times n $}, \\quad \\mathbf x \\in \\mathbb{R}^n \\quad \\text{and} \\quad \\mathbf b \\in \\mathbb{R}^m\\,. \n",
     "$$\n",
     "Geometrically, a solution $ \\mathbf x $ corresponds to a choice of scalars $ x_k\n",
     "$ that would express $ \\mathbf b $ as a linear combination $ \\mathbf b = x_1\\,\n",
